loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:14: error: ')' expected but 'else' found.
  else droite();
  ^